implement basic timer and start button

--- a/new_tomato_app/style.css
+++ b/new_tomato_app/style.css
@@ -6,3 +6,13 @@
   color: #2c3e50;
   margin-top: 60px;
 }
+
+.timer {
+  text-align: center;
+  font-size: 60px;
+  margin-top: 0px;
+}
+
+.red_background {
+  background-color: #d95550;
+}
