--- a/new_tomato_app/style.css
+++ b/new_tomato_app/style.css
@@ -13,6 +13,70 @@ CLASSES
 =============================================
 */
 
+/* 
+HEAD
+*/
+
+/* head text classes */
+.head-content-flex {
+  display: flex;
+  color: white;
+  font-size: 22px;
+}
+
+.flex-child {
+  flex: 1;
+}
+
+.flex-child:first-child {
+  margin-right: 40px
+}
+
+.head-title {
+  text-align: right;
+}
+
+.divider
+{
+	position: relative;
+	margin-top: 90px;
+	height: 1px;
+}
+
+/* Head to body divider classes */
+.div-transparent
+{
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 5%;
+	right: 5%;
+	width: 90%;
+	height: 1px;
+	background-image: linear-gradient(to right, transparent, rgb(48,49,51), transparent);
+}
+
+.div-dot:after
+{
+	content: "";
+	position: absolute;
+	z-index: 1;
+	top: -9px;
+	left: calc(50% - 9px);
+	width: 18px;
+	height: 18px;
+	background-color: #DD6662;
+	border: 1px solid rgb(48,49,51);
+	border-radius: 50%;
+	box-shadow: inset 0 0 0 2px #DD6662,
+					0 0 0 4px black;
+}
+
+
+/* 
+BODY
+*/
+
 /* sets styling for countdown timer */
 .timer {
   text-align: center;
@@ -21,6 +85,6 @@ CLASSES
 }
 
 /* set main page background color*/
-.red_background {
+.red-background {
   background-color: #d95550;
 }
