--- a/new_tomato_app/style.css
+++ b/new_tomato_app/style.css
@@ -65,10 +65,10 @@ HEAD
 	left: calc(50% - 9px);
 	width: 18px;
 	height: 18px;
-	background-color: #DD6662;
+	background-color: white;
 	border: 1px solid rgb(48,49,51);
 	border-radius: 50%;
-	box-shadow: inset 0 0 0 2px #DD6662,
+	box-shadow: inset 0 0 0 2px white,
 					0 0 0 4px black;
 }
 
