tasks now display to user when submitted, deleted when session ends

--- a/new_tomato_app/style.css
+++ b/new_tomato_app/style.css
@@ -248,3 +248,15 @@ styling for button below timer
 	box-shadow: 0 5px #666;
 	transform: translateY(4px);
   }
+
+
+/*
+-------------------------------
+styling for task module
+-------------------------------
+*/
+
+/* sets styling for task list */
+.task-list {
+	list-style-position: inside
+}
