improve comment documentation

--- a/new_tomato_app/style.css
+++ b/new_tomato_app/style.css
@@ -212,7 +212,7 @@ countdown timer styling
 	line-height: 34px;
   	height: 110px;
 }
-.small-text {
+.finish-text {
 	font-size: 45px;
 	line-height: 100px;
   	height: 157px;
