rework theme changing and new task form

--- a/new_tomato_app/style.css
+++ b/new_tomato_app/style.css
@@ -7,6 +7,11 @@
   margin-top: 80px;
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+	color: white;
+	padding-left: 5px;
+  }
+
 
 /* 
 =============================================
@@ -256,7 +261,50 @@ styling for task module
 -------------------------------
 */
 
-/* sets styling for task list */
-.task-list {
-	list-style-position: inside
+/* sets smaller animated button */
+.smaller {
+	padding: 5px 5px;
+	font-size: 14px;
+	box-shadow: 0 4px #999;
+	border-radius: 5px;
+
+}
+
+/* sets for new task form */
+.new-task-form {
+	display: flex;
+	justify-content: center;
+}
+
+.item {
+	margin: 6px;
+	max-width: 460px;
+	appearance: none;
+	border: none;
+	outline: none;
+	background: none;
+}
+
+.new-task-length {
+	max-width: 70px;
+	border-radius: px;
+	color: white;
+	border-radius: 5px;
+}
+
+.new-task-input {
+	flex-grow: 1;
+	font-size: 1.3rem;
+	color: white;
+	border-radius: 5px;
+
+}
+
+.new-task-submit {
+	background: white;
+}
+
+.task-theme {
+	background-color: var(--accent);
+
 }
