--- a/new_tomato_app/style.css
+++ b/new_tomato_app/style.css
@@ -342,6 +342,10 @@ styling for task module
 	padding-right: 460px;
 }
 
+.strikethrough{
+	text-decoration: line-through;
+}
+
 span {
 	padding: 10px;
 }
