starter code for new profile and settings modals

--- a/new_tomato_app/style.css
+++ b/new_tomato_app/style.css
@@ -132,6 +132,11 @@ HEAD CLASSES
 	font-weight: bold;
 }
 
+.center {
+	position: absolute !important;
+	justify-content: center !important;
+}
+
 /* .head-title {
   align-self: center;
 }
