add forms for settings and create new profile

--- a/new_tomato_app/style.css
+++ b/new_tomato_app/style.css
@@ -61,7 +61,50 @@ HEAD CLASSES
 =============================================
 */
 
+.close {
+	position: absolute;
+	right: 32px;
+	top: -6px;
+	bottom: 0px;
+	width: 32px;
+	height: 32px;
+	opacity: 0.3;
+  }
+  .close:hover {
+	opacity: 1;
+  }
+  .close:before, .close:after {
+	position: absolute;
+	left: 15px;
+	content: ' ';
+	height: 33px;
+	width: 2px;
+	background-color: #333;
+  }
+  .close:before {
+	transform: rotate(45deg);
+  }
+  .close:after {
+	transform: rotate(-45deg);
+  }
 
+dialog {
+	border:none;
+	border-radius: 10px;
+	background-color:;
+}
+
+dialog::backdrop {
+	background: black;
+	opacity: .4;
+}
+
+.modal-title {
+	font-size: 20px;
+	padding: 0px;
+	margin: 0px;
+	color: gray;
+}
   
 .dropdown-content {
 	display: none;
